--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -170,7 +170,7 @@ section are all attempts to learn some version of the BOLD model.
 There have been quite a few efforts to quantify the parameters of the
 various BOLD models.  Although \cite{Buxton1998} and \cite{Friston2000}
 both proposed physiologically reasonable values for the model parameters, 
-\cite{Friston2002} was the first paper to calculate the parameters based 
+\cite{Friston2002b} was the first paper to calculate the parameters based 
 on actual FMRI data. However, in that case, the voxels were chosen from
 regions that were detected as active by the GLM. It is therefore possible
 that the parameters are biased toward parameters that fit the linear model.
