almost done with methods

--- a/doc/thesis/intro.tex
+++ b/doc/thesis/intro.tex
@@ -359,10 +359,10 @@ normalized (changed to percent difference).
 
 \begin{figure}
 \centering
-\subfigure[]{\label{fig:QQDDlta:A}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_29_49_9}}
-\subfigure[]{\label{fig:QQDDlta:B}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_34_43_24}}
-\subfigure[]{\label{fig:QQDelta:C}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_22_38_23}}
-\subfigure[]{\label{fig:QQDDlta:D}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_37_29_24}}
+\subfigure[]{\label{fig:QQDDelta:A}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_29_49_9}}
+\subfigure[]{\label{fig:QQDDelta:B}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_34_43_24}}
+\subfigure[]{\label{fig:QQDDelta:C}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_22_38_23}}
+\subfigure[]{\label{fig:QQDDelta:D}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_37_29_24}}
 \caption{Q-Q Plots of resting state data, using the BOLD signal changes}
 \label{fig:QQDelta}
 \end{figure}
@@ -440,7 +440,7 @@ Balloon parameters, those results are summarized in \autoref{tab:Params}
 
 \begin{table}[t]
 \centering
-\begin{tabular}{|c || c | c | c |}
+\begin{tabular}{|c || c | c | c | c|}
 \hline 
 Parameter  & \cite{Friston2002} & \cite{Johnston2008} & \cite{Vakorin2007} & \cite{Deneux2006}\\
 \hline
