--- a/doc/thesis/particlefilters.tex
+++ b/doc/thesis/particlefilters.tex
@@ -436,7 +436,7 @@ will approach the width of the underlying uncertainty, $\nu_x$ and $\nu_y$.
 
 \section{Weighting Function}
 Because the distribution of $\nu_y$ in \autoref{eq:measass} is unknown,
-it is necessary to choose a distribution for this. This distribution,
+it is necessary to choose a distribution for this. This distribution
 is extremely important because $\nu_y \sim P(y_k | x(T))$, which is used
 for updating weights. Ideally this weighting function would exactly 
 match the measurement error in
