--- a/doc/thesis/results.tex
+++ b/doc/thesis/results.tex
@@ -1,4 +1,8 @@
 \chapter{Results}
+\section{Weighting Function Comparison}
+\label{sec:Results Weights}
+
+
 \section{Single Time-Series Simulation}
 
 Graphs: 
