little more on methods

--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -39,6 +39,7 @@ are often more used, as discussed in
 \autoref{sec:Current Techniques General Linear Model}.
 
 \subsection{Random Field Theory}
+\label{sec:RFT}
 SPM methods make significant use of T-Tests across large regions;
 however, such T-tests work slightly differently than a single
 individual test. A t-test with a p-value of $.05$ over a modestly sized FMRI image,
